--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@wisdesign/icons",
-  "version": "0.0.13",
+  "name": "@wisdesign/lsicon",
+  "version": "0.0.0",
   "description": "Elegant and Open-Source Icon Library, Discover over 400 high-quality, fully customizable SVG icons for your projects.",
   "keywords": [
     "wisdesign",
