--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisdesign/lsicon",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Elegant and Open-Source Icon Library, Discover over 400 high-quality, fully customizable SVG icons for your projects.",
   "keywords": [
     "wisdesign",
@@ -28,7 +28,7 @@
     "rc": "pnpm changeset pre enter rc",
     "exit": "pnpm changeset pre exit",
     "changeset": "npx changeset",
-    "version": "pnpm changeset version && node ./scripts/version.js",
+    "version": "pnpm changeset version",
     "publish": "pnpm publish -r",
     "clean": "rm -rf node_modules",
     "build": "node ./scripts/icons.js && NODE_ENV=production rollup -c"
